vt6/posix1.0: adjust for new vt6/foundation

--- a/spec/posix/1.0.md
+++ b/spec/posix/1.0.md
@@ -7,26 +7,21 @@ The canonical URL for this document is <https://vt6.io/std/posix/1.0/>.
 
 The key words "MUST", "MUST NOT", "REQUIRED", "SHALL", "SHALL NOT", "SHOULD", "SHOULD NOT", "RECOMMENDED",  "MAY", and "OPTIONAL" in this document are to be interpreted as described in [RFC 2119](https://tools.ietf.org/html/rfc2119).
 
+Unless stated otherwise, this document implies all definitions of terms made by [`vt6/foundation`](https://vt6.io/std/foundation/) and other referenced modules.
+
 ## 1. Scope
 
-Operating systems that implement the [POSIX.1 specification](http://pubs.opengroup.org/onlinepubs/9699919799/) are admissible environments for VT6 clients and servers.
+Operating systems that implement the [POSIX.1 specification](http://pubs.opengroup.org/onlinepubs/9699919799/) are admissible environments for VT6 clients and terminals.
 This module defines how various platform-specific mechanisms throughout VT6 work on such operating systems.
 
-## 2. Definitions for the `vt6/core1.0` module
+## 2. Definitions for `vt6/foundation`
 
-Standard input and output for each VT6 client are the file descriptors 0 and 1 of that process, respectively.
+Standard input, output and error for each VT6 client are the file descriptors 0, 1 and 2 of that process, respectively.
 
-POSIX allows processes to be started while a VT6 server is not present.
-Therefore, VT6 clients MUST use the following method to determine whether a VT6 server is present.
+Message input and message output for each VT6 client are the file descriptors 100 and 101 of that process, respectively.
 
-1. If the `VT6` environment variable is present, its content is the absolute path to a socket file.
-   In this case, the VT6 client SHALL assume that a VT6 server is present.
-   To obtain a server connection, the VT6 client SHALL connect to this socket file with socket type `SOCK_SEQPACKET`, and upon success, use the open socket as a server connection.
-   When the connection to the socket fails, the VT6 client MAY either bail out, or continue to operate as if no VT6 server is present.
-
-2. If the `TERM` environment variable is present and contains the string `vt6`, the VT6 client SHALL assume that a VT6 server is present, but that there is no method to obtain server connections.
-
-3. If the `VT6` environment variable is absent and the `TERM` environment variable does not contain the string `vt6`, the VT6 client MUST consider the VT6 server to be absent.
+POSIX allows processes to be started while a VT6 terminal is not present.
+If, upon startup, the client finds message input or message output to be missing, it SHALL consider itself running on a non-VT6-enabled terminal.
 
 ## 3. Definitions for the `vt6/sig1.0` module
 
