Replace 'server' by 'terminal'

--- a/spec/posix/1.0.md
+++ b/spec/posix/1.0.md
@@ -36,4 +36,4 @@ When there is no signal dispatcher, the terminal SHOULD run all clients inside a
 When there is a signal dispatcher, the signal dispatcher SHALL use at least one process group in the same way.
 If the signal dispatcher can distinguish between client processes running in the foreground or in the background, it SHOULD use multiple process groups to track which processes are running in the foreground and send the POSIX signals to the current foreground process group only.
 
-When a server or signal dispatcher uses the `SIGSTOP` signal to suspend processes, the `SIGCONT` signal SHALL be used to resume these processes once the user instructs the server or signal dispatcher to do so.
+When a terminal or signal dispatcher uses the `SIGSTOP` signal to suspend processes, the `SIGCONT` signal SHALL be used to resume these processes once the user instructs the terminal or signal dispatcher to do so.
