adjust for current state of vt6/foundation and vt6/core1.0

--- a/spec/mono/1.0.md
+++ b/spec/mono/1.0.md
@@ -7,12 +7,13 @@ The canonical URL for this document is <https://vt6.io/std/mono/1.0/>.
 
 The key words "MUST", "MUST NOT", "REQUIRED", "SHALL", "SHALL NOT", "SHOULD", "SHOULD NOT", "RECOMMENDED",  "MAY", and "OPTIONAL" in this document are to be interpreted as described in [RFC 2119](https://tools.ietf.org/html/rfc2119).
 
-This document uses the predefined property types from [section 2.4 of `vt6/core1.0`](https://vt6.io/std/core/1.0/#section-2-4).
+Unless stated otherwise, this document implies all definitions of terms made by [`vt6/foundation`](https://vt6.io/std/foundation/) and [`vt6/term1.0`](https://vt6.io/std/term/1.0/).
+This document uses the predefined property types from [`vt6/core1.0`](https://vt6.io/std/core/1.0/).
 
 ## 1. Scope
 
 This module extends the notion of terminals introduced in [`vt6/term`](https://vt6.io/std/term/) with additional definitions and assurances for text layouting using monospace fonts.
-Unless the `mono.enabled` property is set to true, clients MUST NOT assume that texts are rendered with monospace fonts.
+Unless the `mono1.enabled` property is set to true, clients MUST NOT assume that texts are rendered with monospace fonts.
 Clients that use strings of equal length and box-drawing characters to produce a layout may find that the actual rendering does not match their expectation.
 
 *Rationale:* The idea of character-grid layouts is fundamentally incompatible with wide Unicode support.
@@ -23,41 +24,40 @@ In fact, VT6-compliant terminals may not offer monospace layouting at all.
 
 ### 1.1. Dependencies to other modules
 
-VT6 servers MUST NOT agree to using this module unless they have already agreed to using any version of `vt6/term` on the same server connection.
+Terminals MUST NOT announce support for this module unless they announce support for any version of `vt6/term`.
 
 ### 1.2. Monospace layouting
 
-We take the term **terminal** to refer to a terminal as defined in [`vt6/term1.0`](https://vt6.io/std/term/1.0/).
-When the value of the `mono.enabled` property is changed, the server SHALL append a paragraph separator (U+2029) to the terminal document, and move the terminal's cursor to point at the end of the terminal document, after that paragraph separator.
+We take the term **terminal document** to refer to a terminal as defined in [`vt6/term1.0`](https://vt6.io/std/term/1.0/).
+When the value of the `mono1.enabled` property is changed, the terminal SHALL append a paragraph separator (U+2029) to the terminal document, and move the terminal's cursor to point at the end of the terminal document, after that paragraph separator.
 After this operation, the terminal's cursor SHALL NOT move past this paragraph separator, even when the specification of another module would allow it.
 
 *Rationale:* This ensures that that the cursor coordinates (see below) are well-defined.
 
-All text that is added to the terminal document while `mono.enabled` is true SHALL be displayed to the user using a monospace font, that is, a font where at least all printable ASCII characters have the same width.
+All text that is added to the terminal document while `mono1.enabled` is true SHALL be displayed to the user using a monospace font, that is, a font where at least all printable ASCII characters have the same width.
 
 ## 2. Message types for `vt6/mono1.0`
 
 None.
 
-TODO consider adding message types for querying and setting the cursor coordinates (we do not want to have this as a property since it would generate a metric ton of `core.pub` messages); cursor coordinates can be defined as y = number of linebreaks since `mono.enabled` was set to true, x = number of chars since last linebreak
+TODO consider adding message types for querying and setting the cursor coordinates (we do not want to have this as a property since it would generate a metric ton of `core1.pub` messages); cursor coordinates can be defined as y = number of linebreaks since `mono1.enabled` was set to true, x = number of chars since last linebreak
 
 ## 3. Properties for `vt6/mono1.0`
 
-### 3.1. The `mono.enabled` property
+### 3.1. The `mono1.enabled` property
 
 - Acceptable values: booleans
 - Can be set by client: yes
 
+This property is lifetime-bound, as defined in [`vt6/term1.0`](https://vt6.io/std/term/1.0/).
+The initial value is false.
+
+*Rationale:* When a client sets `mono1.enabled`, prints some text and exits, the shell will then observe the previous value of `mono1.enabled` when printing its prompt.
+
 The value of this property indicates whether the terminal is in monospace layouting mode, as described in section 1.2.
-
-When this property is set by a client using a `core.set` message, and its server connection is then closed, the property SHALL be reset to the previous value, unless the property's value has also been set on some other server connection after that `core.set` message.
-
-*Rationale:* When a client sets `mono.enabled`, prints some text and exits, the shell will then observe the previous value of `mono.enabled` when printing its prompt.
-
-TODO consider upstreaming this scoping logic into core
 
 TODO Maybe setting this property should only be allowed for clients whose stdout is connected to the terminal.
 
-### 3.2. The `mono.tabwidth` property
+### 3.2. The `mono1.tabwidth` property
 
 TODO unsigned integer (zero is not allowed)
