vt6/posix1.0: rewrite for the client-server model

--- a/spec/posix/1.0.md
+++ b/spec/posix/1.0.md
@@ -14,22 +14,47 @@ Unless stated otherwise, this document implies all definitions of terms made by 
 Operating systems that implement the [POSIX.1 specification](http://pubs.opengroup.org/onlinepubs/9699919799/) are admissible environments for VT6 clients and terminals.
 This module defines how various platform-specific mechanisms throughout VT6 work on such operating systems.
 
-## 2. Definitions for `vt6/foundation`
+## 2. Definitions
+
+### 2.1. Server socket
+
+A VT6 terminal running on this platform SHALL open a socket with domain `AF_UNIX` and type `SOCK_STREAM` and listen on it throughout its entire lifetime.
+The socket SHALL be opened with a filesystem entry; abstract socket addresses SHALL NOT be used.
+
+Upon accepting a client connection on its socket, the terminal SHALL immediately attempt to read a VT6 message from it.
+If the first data received on that socket is not a valid VT6 message, or a VT6 message other than `posix1.client-hello`, `posix1.stdin-hello` or `posix1.stdout-hello`, the terminal SHALL close the client connection without writing into it.
+Otherwise, it SHALL handle the client connection as described in the section for the respective message below.
+
+Below, we will refer multiple times to clients **connecting to the server socket** with a particular handshake message.
+In those cases, the client SHALL connect to the server socket with domain `AF_UNIX` and type `SOCK_STREAM`, and immediately write the respective handshake message into the server socket.
+If the handshake message expects a response, the client SHALL read the response before continuing.
+
+### 2.2. Definitions for `vt6/foundation`
 
 Standard input, output and error for each VT6 client are the file descriptors 0, 1 and 2 of that process, respectively.
 
-Message input and message output for each VT6 client are the file descriptors 100 and 101 of that process, respectively.
+Upon startup, if a VT6 client needs a message stream, it SHALL obtain one by:
 
-POSIX allows processes to be started while a VT6 terminal is not present.
-If, upon startup, the client finds message input or message output to be missing, it SHALL consider itself running on a non-VT6-enabled terminal.
+- reading a valid `posix1.parent-hello` message from file descriptor 60,
+- connect to the server socket named therein with a `posix1.client-hello` message using the secret from the `posix1.parent-hello` message,
+- read the `posix1.server-hello` response from the terminal, and
+- thereafter use the client connection as a message stream.
 
-## 3. Definitions for the `vt6/sig1.0` module
+If file descriptor 60 does not exist or is not readable, the client SHALL consider itself running on a non-VT6-enabled terminal.
+Any other error or failure occurs during this procedure SHALL be considered a fatal error and the client SHALL exit immediately.
+File descriptor 60 can be closed after reading the full `posix1.parent-hello` message from it.
+
+When launching a client, a shell SHALL create a pipe, write a `posix1.parent-hello` message into the write end with the secret obtained from a `core1.client-new` or equivalent message, immediately close the write end, and pass the read end into the client as file descriptor 60.
+
+### 2.3. Definitions for the `vt6/sig1.0` module
+
+*TODO:* Update this section when amending `vt6/sig1.0` for the current design.
 
 VT6 signals are dispatched to clients by sending the corresponding POSIX signals to the client processes:
 
-- The `sig.interrupt` message corresponds to the `SIGINT` signal.
-- The `sig.quit` message corresponds to the `SIGQUIT` signal.
-- The `sig.suspend` message corresponds to the `SIGSTOP` signal.
+- The `sig1.interrupt` message corresponds to the `SIGINT` signal.
+- The `sig1.quit` message corresponds to the `SIGQUIT` signal.
+- The `sig1.suspend` message corresponds to the `SIGSTOP` signal.
 
 When there is no signal dispatcher, the terminal SHOULD run all clients inside a single process group, and send these POSIX signals to that process group.
 
@@ -37,3 +62,72 @@ When there is a signal dispatcher, the signal dispatcher SHALL use at least one 
 If the signal dispatcher can distinguish between client processes running in the foreground or in the background, it SHOULD use multiple process groups to track which processes are running in the foreground and send the POSIX signals to the current foreground process group only.
 
 When a terminal or signal dispatcher uses the `SIGSTOP` signal to suspend processes, the `SIGCONT` signal SHALL be used to resume these processes once the user instructs the terminal or signal dispatcher to do so.
+
+## 3. Message types for the `vt6/posix1.0` module
+
+## 3.1. The `posix1.parent-hello` message
+
+```vt6
+(posix1.parent-hello <client-secret> <server-socket-path>)
+```
+
+- Role: special
+- Number of arguments: two
+
+When launching a client, this message is written by the shell into file descriptor 60 of the client, as described in section 2.2.
+The first argument SHALL be a client secret issued by the terminal, as accepted by the `<secret-token>` grammar element defined in `vt6/core1.0`.
+The second argument SHALL be the filesystem path of the server socket.
+
+## 3.2. The `posix1.client-hello` message
+
+```vt6
+(posix1.client-hello <client-secret>)
+```
+
+- Role: special (answered by `posix1.server-hello`)
+- Number of arguments: one
+
+During client startup, this message is sent by the client to set up a message stream.
+
+The only argument SHALL be the client secret as received by the client in the `posix1.parent-hello` message, as described in section 2.2.
+The message is semantically invalid if the secret was not given out by the terminal through a `core1.client-new` or equivalent message, or if the secret was already used in a previous `posix1.client-hello` or equivalent message.
+
+## 3.3. The `posix1.server-hello` message
+
+```vt6
+(posix1.server-hello <client-id> <stdin-screen-id> <stdout-screen-id> <stderr-screen-id>)
+```
+
+- Role: special (answers `posix1.client-hello`)
+- Number of arguments: four
+
+Upon receiving a valid `posix1.client-hello` message on a fresh client connection, the server SHALL reply with this message and afterwards handle the client connection as a message stream, as described in section 2.2.
+
+The arguments SHALL follow the same syntax and have the same semantics as for the `core1.client-make` message defined in `vt6/core1.0`.
+They describe the client which receives the message.
+
+## 3.4. The `posix1.stdin-hello` message
+
+```vt6
+(posix1.stdin-hello <stdin-secret>)
+```
+
+- Role: special
+- Number of arguments: one
+
+When a client connects to the server socket with a valid `posix1.stdin-hello` message, ...
+
+*TODO:* This section will be written once `vt6/term1.0` exists and this section can reference the definitions made therein.
+
+## 3.5. The `posix1.stdout-hello` message
+
+```vt6
+(posix1.stdout-hello <stdout-secret>)
+```
+
+- Role: special
+- Number of arguments: one
+
+When a client connects to the server socket with a valid `posix1.stdout-hello` message, ...
+
+*TODO:* This section will be written once `vt6/term1.0` exists and this section can reference the definitions made therein.
