notes from review

--- a/spec/posix/1.0.md
+++ b/spec/posix/1.0.md
@@ -26,7 +26,7 @@ If the first data received on that socket is not a valid VT6 message, or a VT6 m
 Otherwise, it SHALL handle the client connection as described in the section for the respective message below.
 
 Below, we will refer multiple times to clients **connecting to the server socket** with a particular handshake message.
-In those cases, the client SHALL connect to the server socket with domain `AF_UNIX` and type `SOCK_STREAM`, and immediately write the respective handshake message into the server socket.
+In those cases, the client SHALL connect to the server socket with domain `AF_UNIX` and type `SOCK_STREAM`, and immediately write the respective handshake message into that connection.
 If the handshake message expects a response, the client SHALL read the response before continuing.
 
 ### 2.2. Definitions for `vt6/foundation`
