--- a/spec/core/1.0.md
+++ b/spec/core/1.0.md
@@ -15,7 +15,7 @@ Unless stated otherwise, this document implies all definitions of terms made by 
 
 This module contains the most basic parts of the VT6 protocol that can be versioned.
 The only thing more basic than this is [`vt6/foundation`](https://vt6.io/std/foundation/) which contains the unversionable parts of the VT6 protocol.
-Except for [`vt6/term`](https://vt6.io/std/term/), `vt6/core` is the only module which we expect every VT6 application to support.
+Except for [`vt6/term`](https://vt6.io/std/term/) and platform integration modules, `vt6/core` is the only module which we expect every VT6 application to support.
 
 ## 2. Definitions
 
@@ -64,10 +64,11 @@ The recommended way to do so is by including the following sentence near the sta
 - Number of arguments: four
 
 A client sends a `core1.client-make` message to inform the terminal about a client ID that it has chosen.
+Note that, as described in `vt6/foundation`, sect. 2.6, the client ID can also refer to a lifetime within the current client, instead of a new client started by that client.
 
 The first argument of the message SHALL be a client ID.
 The second through fourth argument of the message SHALL be a screen ID, as defined in `vt6/term1.0`, or an empty byte string.
-The message is semantically invalid if any of these three arguments are not empty, but do not contain a screen ID that is known to the terminal.
+The message is semantically invalid if any of the last three arguments contain a screen ID that is not known to the terminal.
 
 If the second argument is not empty, it indicates that the standard input of the client with the given client ID is going to be connected directly to the screen identified by that screen ID.
 The third argument describes the client's standard output, respectively.
@@ -156,7 +157,7 @@ The message is semantically invalid if:
 (core1.set <property-name> <property-value>)
 ```
 
-- Role: request (answered by `core1.pub`)
+- Role: request (answered by `core1.pub`, delayed responses possible)
 - Number of arguments: two
 
 A client can send a `core1.set` message to the terminal to request that the value of a property be changed.
