--- a/spec/core/1.0.md
+++ b/spec/core/1.0.md
@@ -166,7 +166,7 @@ The argument list of a `core1.set` message has the same form as that of a `core1
 The message is semantically invalid if:
 
 - its first argument is not the name of a property, or
-- its second argument is a value that is not permissible for the property in question.
+- its second argument is not a valid value for the property in question according to the specification defining the property.
 
 *Rationale:* For non-trivial properties, the client might not have enough information to decide whether a given value is valid.
 In that case, the client can check for a `nope` response to check the validity of the value.
